--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,47 +1,95 @@
+.sub-form {
+
+}
 h1 {
   background-color: inherit;
+  text-align: center;
+  font-size: 20px;
+  padding: 8px 8px;
+}
+h2 {
+  background-color: inherit;
+  font-size: 16px;
+  text-align: center;
+  font-style: normal;
+  font-weight: normal;
 }
 p {
   background-color: inherit;
+  text-align: center;
 }
-.radioButtonsDiv{
-  background-color: lightblue;
-  display: flex;
-  justify-content:flex-start;
+.sub-button {
+  background-color: #04AA6D; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  flex-wrap: wrap;
+  width: fit-content;
+}
+
+.functional-button {
 
 }
-.buttonsDiv{
-    background-color: lightblue;
+.checkbox-div{
+  vertical-align: bottom;
+  position: relative;
+
+}
+.radio-buttons-div{
+  background-color: inherit;
+  display: flex;
+  justify-content:center;
+  text-align: center;
+  
+
+}
+.buttons-div{
+    background-color: inherit;
     display: flex;
     justify-content:  space-evenly;
-  
+    padding: 15px;
+    text-align: center;
   }
-  body {
+body {
     background-color: powderblue;
+  }
+.menu-button {
+    background-color: #2804aa; 
+    border: none;
+    color: white;
+    padding: 15px 12px;
     text-align: center;
-  }
-  h1 {
-    text-align: center;
-  }
-  iframe {
-    height: auto;
-    width: 800 px;
-    height: fit-content;
-    text-align: center;
-  }
-  .menuButton {
-    border-radius: 8px;
-    color: azure;
-    background-color: blue;
-  }
-  .navigationButton {
-    border-radius: 8px;
-    background-color: red;
-    justify-content: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
   }
   .hidden {
     display: none;
   }
   .block {
     display: block;
+  }
+  .my-div {
+    text-align: center;
+    padding-top: 10px;
+  }
+  .functional-buttons-div {
+    text-align: center;
+  }
+  .names-div{
+    text-align: center;
+  }
+  .places-div{
+    text-align: center;
+  }
+  .texts-div{
+    text-align: center;
+  }
+  h4{
+    font-size: 16px;
+    font-weight: normal;
   }
